...
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_background">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="@{()-> viewModel.onFavoriteClicked()}"
            app:isFavorite="@{viewModel.favorite}"
            app:layout_anchor="@id/detail_poster"
...
                       android:orientation="vertical"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="4dp">

                       <TextView
                           android:id="@+id/detail_title"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="8dp"
                           android:drawableStart="@drawable/ic_article_24"
                           android:drawablePadding="4dp"
                           android:gravity="center_vertical"
...
