<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_top_rated"
        android:icon="@drawable/ic_menu_top_rated"
        android:title=""
        android:iconTint="@color/white"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_newest"
        android:icon="@drawable/ic_menu_newest"
        android:title=""
        android:iconTint="@color/white"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_menu_favorite"
        android:title=""
        android:iconTint="@color/white"
        app:showAsAction="always"/>


</menu>