<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.surkhojb.architectmovies.ui.main.TopRatedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.TopRatedFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_top_rated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:spanCount="2"
            app:items="@{viewModel.movies}"
            tools:listitem="@layout/movie_item" />

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/list_top_rated"
            app:layout_constraintTop_toTopOf="@+id/list_top_rated"
            app:visible="@{viewModel.loading}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>